--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "quote-management",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development tsx src/server/index.ts",
+    "dev": "next dev",
     "build": "next build",
-    "start": "cross-env NODE_ENV=production tsx src/server/index.ts",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -14,25 +13,24 @@
     "lucide-react": "^0.471.1",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
-    "next": "15.1.4",
+    "next": "14.0.4",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.9.16",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18",
+    "react-dom": "^18",
     "resend": "^4.1.1",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/ws": "^8.5.10",
-    "cross-env": "^7.0.3",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "tsx": "^4.19.2",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
     "typescript": "^5"
   }
 }
