--- a/server/package.json
+++ b/server/package.json
@@ -8,12 +8,10 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "ws": "^8.13.0"
-  },
-  "devDependencies": {
+    "ws": "^8.13.0",
     "@types/node": "^20.8.2",
     "@types/ws": "^8.5.5",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "ts-node": "^10.9.1"
   }
 }
